[project]
name = "kyuncli"
version = "0.1.0"
description = "A simple CLI client for kyun.host"
requires-python = ">=3.10"
dependencies = ["click", "httpx", "qrcode", "requests", "keyring", "platformdirs"]

[project.scripts]
kyun = "kyuncli.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"