[project]
name = "kyuncli"
dynamic = ["version"]
description = "A simple CLI client for kyun.sh"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = ["click", "httpx", "qrcode", "requests", "keyring", "platformdirs"]

[project.urls]
Homepage = "https://git.kyun.sh/nthpyrodev/kyuncli"
Repository = "https://git.kyun.sh/nthpyrodev/kyuncli.git"

[project.scripts]
kyun = "kyuncli.cli:cli"

[build-system]
requires = ["setuptools", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "kyuncli/_version.py"
